--- a/stb-red.yaml
+++ b/stb-red.yaml
@@ -4,17 +4,23 @@ contents:
   repositories:
     - https://packages.wolfi.dev/os
   packages:
-    - ca-certificates-bundle
+    # base
+    - bash
     - wolfi-base
-    - busybox
+    # development
     - git
-    - python-3.11
-    - py3.11-pip
+    - py3-pip
+    - python3
+    # sbom
     - syft
+    # k8s & container security
     - grype
     - trivy
-    - checkov
-    - semgrep
+    # reconnaissance
+    - nmap
+    - amass
+    - nuclei
+    - exploitdb
 accounts:
   groups:
     - groupname: nonroot
@@ -22,7 +28,10 @@ accounts:
   users:
     - username: nonroot
       uid: 65532
-      guid: 65532
-  run-as: 65532
+  run-as: nonroot
+paths:
+  - path: /opt/exploitdb
+    type: directory
+    permissions: 0o777
 archs:
   - x86_64
