exploitdb home direcory permission bug fixed

--- a/stb-red.yaml
+++ b/stb-red.yaml
@@ -23,7 +23,7 @@ contents:
     - amass
     - nuclei
     - gobuster
-      # - exploitdb
+    - exploitdb
     # credential access
     - jwt-tool
     # exfiltration
